[gd_scene load_steps=3 format=3 uid="uid://bxdi15oue2aga"]

[ext_resource type="Theme" uid="uid://ewoqwtu8db8g" path="res://ui/level_select.tres" id="1_db7hg"]
[ext_resource type="Script" path="res://ui/level_select.gd" id="1_nj28c"]

[node name="LevelSelect" type="Node2D"]
script = ExtResource("1_nj28c")

[node name="CanvasGroup" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasGroup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Lvl_01_Button" type="Button" parent="CanvasGroup/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_db7hg")
text = "Level 1
"

[node name="Lvl_A_Button" type="Button" parent="CanvasGroup/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_db7hg")
text = "Level A"

[node name="Lvl_B_Button" type="Button" parent="CanvasGroup/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_db7hg")
text = "Level B"

[node name="Lvl_C_Button" type="Button" parent="CanvasGroup/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_db7hg")
text = "Level C"

[connection signal="pressed" from="CanvasGroup/VBoxContainer/Lvl_01_Button" to="." method="_on_lvl_01_button_pressed"]
[connection signal="pressed" from="CanvasGroup/VBoxContainer/Lvl_A_Button" to="." method="_on_lvl_a_button_pressed"]
